<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Media Sekolah</string>
    <string name="action_settings">Clear Database</string>
    <string name="fragment_home">fragment_home</string>
    <string name="account_guru">Account Guru</string>
    <string name="account_anak">Tambah Account</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_news">News</string>
    <string name="topik_berita">Topik..</string>
    <string name="account">Account</string>
    <string name="akun_guru">Akun guru</string>
    <string name="akun_anak">Tambah Account</string>
    <string name="register_nik">Nomor handphone anda</string>
    <string name="register_nis">Nomor nis anak</string>
    <string name="action_update">update</string>
    <string name="comment_view">Comment</string>
    <string name="sign_out">Sign Out</string>
    <string name="user_account">User Account</string>
    <string name="judul">Judul berita..</string>
    <string name="description">Isi berita...</string>
    <string name="action_add">Add</string>
    <string name="action_add_user">Add User</string>
    <string name="action_add_image">Add Image</string>
    <string name="action_remove_image">Remove Image</string>
    <string name="action_draft">Draft</string>
    <string name="action_post">Post</string>
    <string name="action_send_comment">Send comment</string>
    <string name="desc_picture_upload">Picture upload</string>
    <string name="input_activitity">Input Activitity</string>
    <string name="item_save">Save</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_edit">Edit</string>
</resources>
