<?xml version="1.0" encoding="utf-8"?>

<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/top_down_margin"
    android:layout_marginEnd="@dimen/top_down_margin"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginTop="@dimen/top_down_margin"
            android:layout_marginBottom="@dimen/top_down_margin"
            android:hint="@string/profile"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:textStyle="bold" />

        <ImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/ibAccountActivitySave"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/action_add_user"
            app:srcCompat="@drawable/ic_check_primary_24dp" />
    </LinearLayout>

    <android.support.v7.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/small_caption"
                android:text="@string/email" />

            <TextView
                android:id="@+id/tvProfileEmail"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/top_down_margin"
                android:clickable="true"
                android:hint="@string/email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:textSize="@dimen/small_caption"
                android:text="@string/name" />


            <TextView
                android:id="@+id/tvProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/default_margin"
                android:layout_marginTop="@dimen/top_down_margin"
                android:clickable="true"
                android:text="@string/name" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        style="@style/CardView"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:layout_marginTop="@dimen/top_down_margin"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAccountAnak"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:layout_gravity="center_horizontal|center"
                android:layout_weight="1"
                android:text="@string/account_anak"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:id="@+id/linearAccountParent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>
    <LinearLayout
        android:id="@+id/linearAccountTeacher"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></LinearLayout>
    <ListView
        android:id="@+id/listAccountProfile"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />


</LinearLayout>

